# mittaridatapumppu-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  azure-build-main.yml  azure-build-release.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: build-parser.yml  test-parser.yml
parser/: parser.py
