[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "parser/_version.py"

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "Q"]

[project]
name = "mittaridatapumppu-parser"
description = """\
Python based microservice that consumes streaming data and converts it from \
raw format to something else as defined in corresponding parser modules \
obtained from device metadata \
"""
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/tags/v1.0.0.zip",
  "flask",
  "kafka-python",
  "httpx",
  "pydantic",
  "sentry_sdk"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]
test = [
  "ruff",
  "msgpack"
]
