[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[project]
name = "mittaridatapumppu-parser"
description = ""
readme = "README.md"
requires-python = ">=3.10"
version = "v0.1.2"
dependencies = [
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/releases/download/v1.0.2/FVHIoT-1.0.2-py3-none-any.whl",
  "httpx",
  "kafka-python",
  "pydantic",
  "sentry_sdk"
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "gunicorn",
  "httpx",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
test = [
    "pytest",
    "requests"
] #pip-compile --resolver=backtracking --extra test pyproject.toml
